<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:text="@string/ownerTitle"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/IVOwnerAuthor"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:layout_marginTop="10sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TVOwnerInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ownerName"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TVOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/TVOwnerInit"
            android:layout_toRightOf="@id/TVOwnerInit" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TVIdInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TVId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/TVIdInit"
            android:layout_toRightOf="@id/TVIdInit" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TVTypeInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TVType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/TVTypeInit"
            android:layout_toRightOf="@id/TVTypeInit" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TVUserHtmlInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userHtml"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TVUserHtml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/TVUserHtmlInit"
            android:layout_toRightOf="@id/TVUserHtmlInit" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnWebViewUser"
        android:layout_marginTop="10dp"
        android:text="@string/web_view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>