<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp">

        <TextView
            android:id="@+id/TVNameInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TVName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/TVNameInit"
            android:layout_toRightOf="@id/TVNameInit" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/IVImage"
        android:layout_width="50sp"
        android:layout_height="50sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TVAuthorInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TVAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/TVAuthorInit"
            android:layout_toRightOf="@id/TVAuthorInit" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TVWatchersInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watchers"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TVWatchers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/TVWatchersInit"
            android:layout_toRightOf="@id/TVWatchersInit" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TVForkInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forks"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TVFork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/TVForkInit"
            android:layout_toRightOf="@id/TVForkInit" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TVIssueInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issues"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TVIssue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/TVIssueInit"
            android:layout_toRightOf="@id/TVIssueInit" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark" />

</LinearLayout>